--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <h3>ショッピングカート</h3>
-         <% if customer_signed_in?%>
-        <%#= link_to "Destroy", cart_item_path, method: :delete,  "data-confirm" => "本当に削除しますか？" ,class: 'btn btn-sm btn-danger' %>
+      <div class="text-right">
+        <% if customer_signed_in?%>
+        <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete,  "data-confirm" => "本当に削除しますか？" ,class: 'btn btn-sm btn-danger' %>
         <% end %>
+      </div>
   <table class="table table-hover table-inveres">
     <thesd>
       <tr>
@@ -11,6 +13,7 @@
         <th>単価(税込)</th>
         <th>数量</th>
         <th>小計</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -19,10 +22,21 @@
       <tr>
         <td><%= cart_item.item.name %></td>
         <td><%= cart_item.item.with_tax_price %></td>
+        <td>
+          <%= form_with model: cart_item, url: cart_item_path(cart_item.id) do |f| %>
+          <%= f.select :amount, [['１',1], ['２',2], ['３',3]] %>
+          <%= f.submit "変更", class: 'btn btn-sm btn-success' %>
+          <% end %>
+        </td>
         <td><%= cart_item.subtotal %></td>
         <% @total_cash +=  cart_item.subtotal %>
       </tr>
   <% end %>
    </tbody>
   </table>
+  <div>
+   <% if customer_signed_in?%>
+   <%= link_to "買い物を続ける", items_path, class: 'btn btn-sm btn-primary' %>
+   <% end %>
+  </div>
 </div>
