--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -60,7 +60,7 @@
           <tr>
             <th style="padding-right: 5em"></th>
             <th><%= link_to "変更を保存", my_page_path, class: 'btn btn-sm btn-success' %></th>
-            <th><%= link_to "退会する", customers_unsubscribe_path, method: :delete,class: "btn btn-sm btn-danger" %></th>
+            <th><%= link_to "退会する", unsubscribe_path, class: "btn btn-sm btn-danger" %></th>
           </tr>
         </table>
         </div>
