--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -9,7 +9,7 @@
         <tr>
           <th style="padding-right: 5em"></th>
           <th><%= link_to "退会しない", my_page_path, class: 'btn btn-sm btn-success' %></th>
-          <th><%= link_to "退会する", customers_withdrawal_path, method: :patch, class: "btn btn-sm btn-danger" %></th>
+          <th><%= link_to "退会する", withdrawal_path, method: :patch, class: "btn btn-sm btn-danger" %></th>
         </tr>
       </table>
   </div>
