--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,7 +1,7 @@
 <div "container">
     <div class='row mb-3'>
         <div class='col-8 offset-1'>
-          <h4 class="pt-3">注文情報確認</h4>
+          <h3 class="pt-3">注文情報確認</h3>
         </div>
     </div>
     <div class='row'>
@@ -87,6 +87,11 @@
            <%= form_with model: @order, url: orders_path, local: true do |f| %> 
            <%= f.hidden_field :payment_way, :value => @order.payment_way %>
            <%# f.hidden_field ←createに選択したenumを渡すために必要なもの%>
+           <%= f.hidden_field :postal_code, :velue => current_customer.postal_code %>
+           <%= f.hidden_field :address, :velue => current_customer.address %>
+           <%= f.hidden_field :last_name, :velue => current_customer.last_name %>
+           <%= f.hidden_field :first_name, :velue => current_customer.first_name %>
+           <%= f.hidden_field :total_cash, :celue =>@order.total_cash %>
            <%= f.submit "確認画面へ進む", class: 'btn btn-sm btn-success ml-4' %>
           <% end %>
         </div>
