--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,1 +1,28 @@
-注文履歴一覧
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+  <h3>注文情報確認</h3>
+    <table class="table col-10 table-bordered">
+     <tbody>
+      <tr class="table-secondary">
+        <th>注文日</th>
+        <th>配送先</th>
+        <th>注文商品</th>
+        <th>支払金額</th>
+        <th>注文詳細</th>
+      </tr>
+        <% total = 0 %>  
+        
+    <% @orders.each do |order| %>
+       <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><%= link_to "表示する", order_path,class: "btn btn-primary" %></td>
+       </tr>
+       <% end %>
+     </tbody>
+    </table>
+  </div>
+</div>
